--- a/index.css
+++ b/index.css
@@ -369,13 +369,143 @@
     --base-size: 14px;
     --sans-serif: "Montserrat", sans-serif;
     --serif: "Fraunces", serif;
+
+    font-size: var(--base-size);
+  }
+
+  html {
+    box-sizing: border-box;
   }
 
   body {
     margin: 0;
     padding: 0;
     background-color: var(--cream);
-    font-size: var(--base-size);
     font-family: var(--sans-serif);
+  }
+
+  img {
+    max-inline-size: 100%;
+    block-size: auto;
+  }
+}
+
+@layer main {
+  .wrapper {
+    max-width: 300px;
+    margin: 1rem auto;
+    border-radius: 12px;
+  }
+
+  .img-wrapper {
+    border-radius: 1rem 1rem 0 0;
+    background: var(--white);
+  }
+
+  .img-wrapper img {
+    border-radius: 1rem 1rem 0 0;
+  }
+
+  section {
+    background-color: var(--white);
+    padding: 1.4rem;
+    border-radius: 0 0 1rem 1rem;
+  }
+
+  section h2 {
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    color: var(--darkgrayishblue);
+    font-weight: 500;
+    letter-spacing: 5px;
+    margin: 0 0 1rem 0;
+  }
+
+  section h1 {
+    font-family: var(--serif);
+    font-size: 2.15rem;
+    margin: 0 0 1rem 0;
+  }
+
+  .product-description {
+    color: var(--darkgrayishblue);
+    letter-spacing: 0.5px;
+    line-height: 1.5rem;
+  }
+
+  .price {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .price span:first-of-type {
+    font-family: var(--serif);
+    color: var(--darkcyan);
+    font-weight: 700;
+
+    font-size: 2rem;
+  }
+
+  .price span:last-of-type {
+    text-decoration: line-through;
+    color: var(--darkgrayishblue);
+  }
+
+  .cart {
+    background: var(--darkcyan);
+    padding: 1em;
+    width: 100%;
+    margin-top: 1rem;
+    border: none;
+    border-radius: 10px;
+    color: var(--white);
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.75rem;
+  }
+}
+
+@media (width > 1024px) {
+  body {
+    /* To center the card on desktop */
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .wrapper {
+    max-width: 600px;
+    display: flex;
+  }
+
+  .img-wrapper {
+    flex-basis: 50%;
+    border-radius: 1rem 0 0 1rem;
+  }
+
+  .img-wrapper img {
+    border-radius: 1rem 0 0 1rem;
+    height: 100%;
+  }
+
+  section {
+    flex-basis: 50%;
+    border-radius: 0 1rem 1rem 0;
+    padding: 2rem;
+  }
+
+  section h2,
+  section h1,
+  .product-description,
+  .price {
+    margin-bottom: 1.8rem;
+  }
+
+  .cart:hover {
+    background-color: #1a4032;
+    cursor: pointer;
   }
 }
