--- a/style.css
+++ b/style.css
@@ -174,3 +174,10 @@
   align-items: center;
   gap: 0.75rem;
 }
+
+.fxg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.75rem;
+}
